src/objects/DALP_Request__c.object
<CustomObject>
    <description>Object to store DALP requests.</description>
    <fields>
        <fullName>HousingApp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Housing Application</label>
        <referenceTo>Housing_Application__c</referenceTo>
        <relationshipLabel>DALP Request</relationshipLabel>
        <relationshipName>DALP_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Housing_Type__c</fullName>
        <label>Housing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BMR Pre-Approval or Refinance Request</fullName>
                </value>
                <value>
                    <fullName>Down Payment Assistance or MCC Request for BMR/City Second Properties</fullName>
                </value>
                <value>
                    <fullName>Down Payment Assistance or MCC Request for Non-MOHCD Market Rate Properties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lender chosen on the DALP request page.</description>
        <label>Lender</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DALP Request</relationshipLabel>
        <relationshipName>DALP_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DALP Request (Requested By)</relationshipLabel>
        <relationshipName>DALP_Requested_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DALP Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Requested_By__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>HousingApp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DP-{0000000}</displayFormat>
        <label>DALP Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DALP Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>